fixed slider view to not stretch images

--- a/css/image-slider.css
+++ b/css/image-slider.css
@@ -10,7 +10,7 @@ img {
 /* styles slideshow container */
 .slideshow-container {
   width: 100%;
-  min-height: 120vh;
+  min-height: 130vh;
   position: relative;
   margin: auto;
   border-style: none;
